# Control-of-Electric-Wheelchair-via-Eye-Gestures-for-People-with-Neurological-Disorder

./: CMakeLists.txt  README.md
include/: control_instruction.h  eye_tracker.h  pupil_tracker.h  utils.h
src/: control_instruction.cpp  eye_tracker.cpp  main.cpp  pupil_tracker.cpp  utils.cpp
